[project]
name = "utils_LionHp192"
version = "1.0"
description = "utils for convert usually use"
authors = [
  { name="LionHp192", email="idontgotit@gmail.com" },
]
readme = "README.md"
keywords = ["utils-convert"]
requires-python = ">=3.2"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
Homepage = "https://github.com/idontgotit/utils/"


